<resources>
    <!-- App -->
    <string name="app_name">Random Notes</string>

    <!-- Default note -->
    <string name="default_note_title">Default note</string>
    <string name="default_note_subtitle">This is subtitle</string>

    <!-- Titles -->
    <string name="title_auth_fragment">Auth</string>

    <!-- Hints -->
    <string name="hint_subtitle">Subtitle</string>
    <string name="hint_title">Title</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <!-- Actions -->
    <string name="action_add">Add</string>
    <string name="action_restore">Restore</string>
    <string name="action_sync">Sync</string>
    <string name="action_add_note">Add note</string>
    <string name="action_delete_account">Delete account</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_continue_with_google">Continue with Google</string>

    <!-- Commons -->
    <string name="common_invite">Invite</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_ok">OK</string>

    <!-- Messages -->
    <string name="message_not_account">Not account yet? Create one</string>
    <string name="message_have_account">I have an account</string>
    <string name="message_sign_in">Please sign in to app and try again!</string>
    <string name="message_empty_notes_list">Notes list is empty!</string>
    <string name="message_invite_sent">Invite sent!</string>
    <string name="message_incorrect_email_format">Incorrect email format!</string>
    <string name="message_incorrect_password_length">Password length should be greater than %d and less than %d symbols!</string>

    <!-- Errors -->
    <string name="error_invite_sent">Cannot find user with entered email!</string>
    <string name="error_cannot_sync_notes">Cannot sync notes!</string>
    <string name="error_cannot_restore_notes">Cannot restore notes!</string>
    <string name="error_auth">Auth error!</string>
</resources>
