<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="@dimen/padding_default">

    <EditText
            android:id="@+id/edit_title"
            style="@style/AppEditText"
            android:hint="@string/hint_title"/>

    <EditText
            android:id="@+id/edit_subtitle"
            style="@style/AppEditText"
            android:layout_marginTop="@dimen/margin_default"
            android:hint="@string/hint_subtitle"/>

    <Button
            android:id="@+id/save_note"
            style="@style/AppButton"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_gravity="end"
            android:text="@string/action_add"/>

</LinearLayout>