<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:padding="@dimen/padding_large"
             android:background="@color/colorWhite">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_large"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/colorPrimary"
                android:textStyle="italic"
                android:text="@string/app_name"/>

        <EditText
                android:id="@+id/email"
                style="@style/AppEditText"
                android:layout_marginTop="@dimen/margin_default"
                android:hint="@string/hint_email"/>

        <EditText
                android:id="@+id/password"
                style="@style/AppEditText"
                android:layout_marginTop="@dimen/margin_default"
                android:inputType="textPassword"
                android:hint="@string/hint_password"/>

        <Button
                android:id="@+id/login_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:text="@string/action_login"/>

        <TextView
                android:id="@+id/register_account"
                style="@style/AppText"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_default"
                android:textSize="@dimen/text_size_default"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/message_not_account"/>

        <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"/>

    </LinearLayout>

</FrameLayout>