<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:fab="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorWhite">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notes"
            style="@style/AppRecyclerView"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <jahirfiquitiva.libs.fabsmenu.FABsMenuLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|end"
            fab:fabs_menu_overlayColor="@color/backgroundFab"
            fab:fabs_menu_clickableOverlay="true">

        <jahirfiquitiva.libs.fabsmenu.FABsMenu
                android:id="@+id/main_fab_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                fab:fab_moreButtonBackgroundColor="@color/colorAccent"
                fab:fab_moreButtonRippleColor="@color/colorMainFabMenuPressed"
                fab:fab_moreButtonPlusIcon="@drawable/ic_add">

            <jahirfiquitiva.libs.fabsmenu.TitleFAB
                    android:id="@+id/restore_notes"
                    style="@style/AppFAB"
                    fab:fab_title="@string/action_restore"
                    fab:backgroundTint="@color/colorMainFabRestore"
                    fab:srcCompat="@drawable/ic_restore"
                    fab:fabSize="mini"/>

            <jahirfiquitiva.libs.fabsmenu.TitleFAB
                    android:id="@+id/sync_notes"
                    style="@style/AppFAB"
                    fab:fab_title="@string/action_sync"
                    fab:backgroundTint="@color/colorMainFabSync"
                    fab:srcCompat="@drawable/ic_sync"
                    fab:fabSize="mini"/>

            <jahirfiquitiva.libs.fabsmenu.TitleFAB
                    android:id="@+id/add_note"
                    style="@style/AppFAB"
                    fab:fab_title="@string/action_add_note"
                    fab:backgroundTint="@color/colorMainFabAddNote"
                    fab:srcCompat="@drawable/ic_note_add"
                    fab:fabSize="mini"/>

        </jahirfiquitiva.libs.fabsmenu.FABsMenu>

    </jahirfiquitiva.libs.fabsmenu.FABsMenuLayout>

</FrameLayout>